Add github link

--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
     </section>
     </footer>
     </div>
+    <div class="link-to-github">
+    <a href="https://github.com/Malva86/Weather-app" target="_blank">Open-source code</a><span> by Malwina Flis</span>
+    </div>
     <!--JS-->
     <script type="text/javascript" src="src/index.js"></script>
   </body>
